salesforce/force-app/main/default/objects/Event_Contact__c/Event_Contact__c.object-meta.xml
<CustomObject>
    <label>Event Contact</label>
    <pluralLabel>Event Contacts</pluralLabel>
    <nameField>
        <label>Event Contact Number</label>
        <type>AutoNumber</type>
        <displayFormat>EC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Maps to the Zoho Event_Contacts module: a target-list row linking a Contact to a Campaign for one trade show, carrying attendance and meeting-booking status. Junction-shaped, kept as a custom object (not a many-to-many junction object) to match the source module's own flat shape.</description>
</CustomObject>