salesforce/force-app/main/default/objects/Event_Contact__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Contacts</relationshipLabel>
    <relationshipName>Event_Contacts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>