salesforce/force-app/main/default/objects/Event_Contact__c/fields/Attending_Status__c.field-meta.xml
<CustomField>
    <fullName>Attending_Status__c</fullName>
    <label>Attending Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Investigating</fullName><default>true</default><label>Investigating</label></value>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>