salesforce/force-app/main/default/objects/Event_Contact__c/fields/BD_Comment__c.field-meta.xml
<CustomField>
    <fullName>BD_Comment__c</fullName>
    <label>BD Comment</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>