salesforce/force-app/main/default/objects/Event_Contact__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <type>Lookup</type>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Contacts</relationshipLabel>
    <relationshipName>Event_Contacts</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>Left optional deliberately: salesforce/data/export.mjs does not create
        standard Campaign records for the Northbeam dataset (out of scope for this
        export — see its header comment and salesforce/README.md), so rows it imports
        carry no Campaign__c. A production deployment that also imports Campaigns could
        tighten this back to required.</description>
</CustomField>