salesforce/force-app/main/default/objects/Event_Contact__c/fields/Is_Target__c.field-meta.xml
<CustomField>
    <fullName>Is_Target__c</fullName>
    <label>Is Target</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <required>true</required>
</CustomField>