salesforce/force-app/main/default/objects/Event_Contact__c/fields/Origin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Origin_Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Contacts</relationshipLabel>
    <relationshipName>Event_Contacts</relationshipName>
    <deleteConstraint>Cascade</deleteConstraint>
    <required>true</required>
</CustomField>