salesforce/force-app/main/default/objects/Event_Contact__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>P1</fullName><default>false</default><label>P1</label></value>
            <value><fullName>P2</fullName><default>false</default><label>P2</label></value>
            <value><fullName>P3</fullName><default>false</default><label>P3</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>