salesforce/force-app/main/default/objects/Event_Contact__c/fields/SL_Comment__c.field-meta.xml
<CustomField>
    <fullName>SL_Comment__c</fullName>
    <label>Service Line Comment</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>